fixed finally on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -197,10 +197,19 @@ a:hover, a:focus, a:active {
   background-color: #fce38a;
 }
 
-.fixed-top {
+.navbar-toggler {
+  padding: .25rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+}
+
+/* .fixed-top {
   position: fixed;
   top: 0;
   right: 1 !important;
   left: 0;
   z-index: 1030;
-}
+} */
